# penguin_pi_ros2

./: CMakeLists.txt  DEFAULT_FASTRTPS_PROFILE.xml  README.md  package.xml  setup.py
config/: ekf.yaml
diffdrive_arduino/: CMakeLists.txt  package.xml  penguinpi_hardware.xml
diffdrive_arduino/include/diffdrive_arduino/: penguinPi.py
diffdrive_arduino/src/: penguinpi_comms.cpp
installation/: conda_requirements.txt  humble_py310_dev_env.yml  setup_conda.sh
installation/install_scripts/: install_conda_env.sh  install_mambaforge.sh
launch/: display_gazebo.launch.py
penguin_pi_urdf/: microcontroller_node.py
rviz/: urdf_config.rviz
src/: motor_node.py  uart_manager_node.py
src/description/: penguin_pi_urdf.urdf
src/diffdrive_arduino/: CMakeLists.txt  package.xml
src/diffdrive_arduino/bringup/config/: diffbot_controllers.yaml
src/diffdrive_arduino/bringup/launch/: diffbot.launch.py  diffbot_rviz.launch.py
src/diffdrive_arduino/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_arduino/description/rviz/: diffbot.rviz  diffbot_view.rviz
src/diffdrive_arduino/description/urdf/: diffbot_description.urdf.xacro
src/diffdrive_arduino/hardware/: arduino_comms.cpp  diffbot_system.cpp
src/diffdrive_arduino/hardware/include/diffdrive_arduino/: arduino_comms.h  diffbot_system.hpp  penguinpi_comms.h
src/diffdrive_arduino/include/diffdrive_arduino/: config.h  diffdrive_penguinpi.h  penguinPi.py
src/diffdrive_arduino/src/: diffdrive_penguinpi.cpp  diffdrive_robot.cpp
src/diffdrive_penguinpi/: CMakeLists.txt  README.md  diffdrive_penguinpi.xml  package.xml
src/diffdrive_penguinpi/bringup/launch/: diffbot.launch.py
src/diffdrive_penguinpi/description/launch/: view_robot.launch.py
src/diffdrive_penguinpi/description/ros2_control/: diffbot.ros2_control.xacro
src/diffdrive_penguinpi/description/rviz/: diffbot.rviz
src/diffdrive_penguinpi/description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
src/diffdrive_penguinpi/doc/: userdoc.rst
src/diffdrive_penguinpi/hardware/: diffbot_system.cpp  penguinpi_comms.cpp
src/diffdrive_penguinpi/hardware/include/diffdrive_penguinpi/: diffbot_system.hpp  penguinpi_comms.h  visibility_control.h  wheel.hpp
src/image_flipper/: CMakeLists.txt  package.xml
src/image_flipper/src/: image_flipper_node.cpp
src/localiser/: package.xml  setup.py
src/localiser/localiser/: encoder_to_twist_node.py
src/penguin_pi_config/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/penguin_pi_config/urdf/: penguin_pi_urdf.urdf
src/penguin_pi_controller/: package.xml  setup.cfg  setup.py
src/penguin_pi_controller/penguin_pi_controller/: .stress_test_node.py.swp  microcontroller_node.py  stress_test_node.py
src/penguin_pi_controller/penguin_pi_controller/penguin_pi_lib/: penguinPi.py
src/penguin_pi_interfaces/: CMakeLists.txt  package.xml
src/penguin_pi_launch/: package.xml  setup.cfg  setup.py
src/penguin_pi_launch/launch/: display.launch.py  display_gazebo.launch.py
src/ppi_config/: CMakeLists.txt  package.xml
src/ppi_config/config/: ekf.yaml
src/ppi_config/launch/: display.launch.py  display_ekf.launch.py  display_gazebo.launch.py
src/ppi_controller/: package.xml  setup.cfg  setup.py
src/ppi_controller/ppi_controller/: microcontroller_node.py  stress_test_node.py
src/ppi_controller/ppi_controller/penguin_pi_lib/: penguinPi.py
src/ppi_interfaces/: CMakeLists.txt  package.xml
src/ppi_interfaces/msg/: Encoders.msg
src/ppi_interfaces/srv/: GetEncoders.srv
srv/: GetEncoder.srv  SetVelocity.srv
