<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>penguin_pi_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="grantvanbreda@gmail.com">grant</maintainer>
  <license>TODO: License declaration</license>

  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>penguin_pi_interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
